@@ -13,7 +13,6 @@ import static com.google.common.base.Preconditions.checkArgument;
 import java.io.IOException;
 import java.io.PrintStream;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.logging.Level;
 import org.sosy_lab.common.ShutdownNotifier;
@@ -71,7 +70,7 @@ public class ProofCheckAlgorithm implements Algorithm, StatisticsProvider {
       name = "proof",
       description = "file in which proof representation needed for proof checking is stored")
   @FileOption(FileOption.Type.OPTIONAL_INPUT_FILE)
-  protected Path proofFile = Paths.get("arg.obj");
+  protected Path proofFile = Path.of("arg.obj");
 
   public ProofCheckAlgorithm(
       ConfigurableProgramAnalysis cpa,
@@ -108,7 +107,6 @@ public class ProofCheckAlgorithm implements Algorithm, StatisticsProvider {
   }
 
   protected ProofCheckAlgorithm(
-      ConfigurableProgramAnalysis cpa,
       Configuration pConfig,
       LogManager logger,
       ShutdownNotifier pShutdownNotifier,
@@ -119,6 +117,7 @@ public class ProofCheckAlgorithm implements Algorithm, StatisticsProvider {
 
     pConfig.inject(this, ProofCheckAlgorithm.class);
 
+    ConfigurableProgramAnalysis cpa = pReachedSet.getCPA();
     checkingStrategy =
         PCCStrategyBuilder.buildStrategy(
             pConfig, logger, pShutdownNotifier, proofFile, cpa, pCfa, specification);
@@ -129,7 +128,7 @@ public class ProofCheckAlgorithm implements Algorithm, StatisticsProvider {
         "Parameter pReachedSet may not be null and may not have any states in its waitlist.");
 
     stats.totalTimer.start();
-    checkingStrategy.constructInternalProofRepresentation(pReachedSet);
+    checkingStrategy.constructInternalProofRepresentation(pReachedSet, cpa);
     stats.totalTimer.stop();
   }
 
