@@ -20,7 +20,6 @@ import com.google.common.base.Function;
 import com.google.common.base.Preconditions;
 import com.google.common.base.Predicate;
 import com.google.common.base.Predicates;
-import com.google.common.base.Strings;
 import com.google.common.collect.ConcurrentHashMultiset;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Maps;
@@ -42,7 +41,6 @@ import java.io.Writer;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -54,7 +52,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import org.checkerframework.checker.nullness.qual.Nullable;
@@ -90,9 +87,8 @@ import org.sosy_lab.cpachecker.core.algorithm.termination.lasso_analysis.LassoAn
 import org.sosy_lab.cpachecker.core.algorithm.termination.lasso_analysis.RankVar;
 import org.sosy_lab.cpachecker.core.counterexample.CounterexampleInfo;
 import org.sosy_lab.cpachecker.core.reachedset.UnmodifiableReachedSet;
-import org.sosy_lab.cpachecker.core.specification.Property.CommonPropertyType;
+import org.sosy_lab.cpachecker.core.specification.Property.CommonVerificationProperty;
 import org.sosy_lab.cpachecker.core.specification.Specification;
-import org.sosy_lab.cpachecker.core.specification.SpecificationProperty;
 import org.sosy_lab.cpachecker.cpa.arg.ARGState;
 import org.sosy_lab.cpachecker.cpa.arg.path.ARGPath;
 import org.sosy_lab.cpachecker.cpa.arg.witnessexport.Witness;
@@ -122,7 +118,7 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
             + "exported to this file."
   )
   @FileOption(Type.OUTPUT_FILE)
-  private Path resultFile = Paths.get("terminationAnalysisResult.txt");
+  private Path resultFile = Path.of("terminationAnalysisResult.txt");
 
   @Option(
     secure = true,
@@ -130,14 +126,14 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
     description = "Export termination counterexample to file as GraphML automaton "
   )
   @FileOption(Type.OUTPUT_FILE)
-  private Path violationWitness = Paths.get("nontermination_witness.graphml");
+  private Path violationWitness = Path.of("nontermination_witness.graphml");
 
   @Option(
       secure = true,
       name = "violation.witness.dot",
       description = "Export termination counterexample to file as dot/graphviz automaton ")
   @FileOption(Type.OUTPUT_FILE)
-  private Path violationWitnessDot = Paths.get("nontermination_witness.dot");
+  private Path violationWitnessDot = Path.of("nontermination_witness.dot");
 
   @Option(
     secure = true,
@@ -181,12 +177,7 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
             pConfig,
             pLogger,
             Specification.alwaysSatisfied()
-                .withAdditionalProperties(
-                    ImmutableSet.of(
-                        new SpecificationProperty(
-                            pCFA.getMainFunction().getFunctionName(),
-                            CommonPropertyType.TERMINATION,
-                            Optional.empty()))),
+                .withAdditionalProperties(ImmutableSet.of(CommonVerificationProperty.TERMINATION)),
             pCFA);
     locFac = new LocationStateFactory(pCFA, AnalysisDirection.FORWARD, pConfig);
   }
@@ -417,7 +408,7 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
 
     for (Entry<String, Integer> terminationArgument : terminationArguementTypes.entrySet()) {
       String name = terminationArgument.getKey();
-      String whiteSpaces = Strings.repeat(" ", 49 - name.length());
+      String whiteSpaces = " ".repeat(49 - name.length());
       pOut.println("  " + name + ":" + whiteSpaces + format(terminationArgument.getValue()));
     }
 
@@ -425,9 +416,7 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
 
     if (pResult == Result.FALSE && (violationWitness != null || violationWitnessDot != null)) {
       Iterator<ARGState> violations =
-          pReached
-              .asCollection()
-              .stream()
+          pReached.stream()
               .filter(AbstractStates::isTargetState)
               .map(s -> AbstractStates.extractStateByType(s, ARGState.class))
               .filter(s -> s.getCounterexampleInformation().isPresent())
@@ -495,28 +484,33 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
 
     Predicate<? super ARGState> relevantStates = Predicates.in(cexStates);
 
-    final Witness witness =
-        witnessExporter.generateTerminationErrorWitness(
-            newRoot,
-            relevantStates,
-            BiPredicates.bothSatisfy(relevantStates),
-            state -> Objects.equals(state, loopStartInCEX),
-            provideQuasiInvariant);
+    try {
+      final Witness witness =
+          witnessExporter.generateTerminationErrorWitness(
+              newRoot,
+              relevantStates,
+              BiPredicates.bothSatisfy(relevantStates),
+              state -> Objects.equals(state, loopStartInCEX),
+              provideQuasiInvariant);
 
-    if (violationWitness != null) {
-      WitnessToOutputFormatsUtils.writeWitness(
-          violationWitness,
-          compressWitness,
-          pAppendable -> WitnessToOutputFormatsUtils.writeToGraphMl(witness, pAppendable),
-          logger);
-    }
+      if (violationWitness != null) {
+        WitnessToOutputFormatsUtils.writeWitness(
+            violationWitness,
+            compressWitness,
+            pAppendable -> WitnessToOutputFormatsUtils.writeToGraphMl(witness, pAppendable),
+            logger);
+      }
 
-    if (violationWitnessDot != null) {
-      WitnessToOutputFormatsUtils.writeWitness(
-          violationWitnessDot,
-          compressWitness,
-          pAppendable -> WitnessToOutputFormatsUtils.writeToDot(witness, pAppendable),
-          logger);
+      if (violationWitnessDot != null) {
+        WitnessToOutputFormatsUtils.writeWitness(
+            violationWitnessDot,
+            compressWitness,
+            pAppendable -> WitnessToOutputFormatsUtils.writeToDot(witness, pAppendable),
+            logger);
+      }
+    } catch (InterruptedException e) {
+      logger.logUserException(
+          WARNING, e, "Could not export termination witness due to interruption");
     }
   }
 
@@ -784,7 +778,7 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
       return expressionVarName(varName);
     }
 
-    MemoryLocation memLoc = MemoryLocation.valueOf(varName);
+    MemoryLocation memLoc = MemoryLocation.parseExtendedQualifiedName(varName);
     return memLoc.getIdentifier();
   }
 
@@ -824,7 +818,7 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
       result = result.substring(1, result.length() - 1);
     }
 
-    MemoryLocation memLoc = MemoryLocation.valueOf(result);
+    MemoryLocation memLoc = MemoryLocation.parseExtendedQualifiedName(result);
     return memLoc.getIdentifier();
   }
 
